# openapi_server/openapi/openapi.yaml
@@ -5,9 +5,9 @@ info:
   title: SyskenGacha-backend
   version: 1.0.0
 servers:
-- url: /backend/
+  - url: /
 paths:
-  /gacha:
+  /backend/gacha:
     get:
       description: ガチャにて排出される全アイテムのリスト
       operationId: gacha_get
@@ -16,34 +16,34 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GachaItem'
+                $ref: "#/components/schemas/GachaItem"
           description: 正常時のレスポンス
       summary: ガチャリスト
       x-openapi-router-controller: openapi_server.controllers.default_controller
-  /gacha/{ItemId}:
+  /backend/gacha/{ItemId}:
     get:
       description: ガチャアイテム
       operationId: gacha_item_id_get
       parameters:
-      - description: ガチャID
-        explode: false
-        in: path
-        name: ItemId
-        required: true
-        schema:
-          format: int64
-          type: integer
-        style: simple
+        - description: ガチャID
+          explode: false
+          in: path
+          name: ItemId
+          required: true
+          schema:
+            format: int64
+            type: integer
+          style: simple
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GachaList'
+                $ref: "#/components/schemas/GachaList"
           description: 正常なレスポンス
       summary: ガチャアイテム
       x-openapi-router-controller: openapi_server.controllers.default_controller
-  /gacha/random/:
+  /backend/gacha/random/:
     get:
       description: ランダムなガチャアイテム
       operationId: random_get
@@ -52,24 +52,24 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GachaItem'
+                $ref: "#/components/schemas/GachaItem"
           description: 正常なレスポンス
       summary: ランダムなガチャアイテム
       x-openapi-router-controller: openapi_server.controllers.default_controller
-  /gacha/static/{PictId}:
+  /backend/static/{PictId}:
     get:
       description: 指定されたIdの画像を返却します
       operationId: static_pict_id_get
       parameters:
-      - description: 取得したい画像の連番ID
-        explode: false
-        in: path
-        name: PictId
-        required: true
-        schema:
-          format: int64
-          type: integer
-        style: simple
+        - description: 取得したい画像の連番ID
+          explode: false
+          in: path
+          name: PictId
+          required: true
+          schema:
+            format: int64
+            type: integer
+          style: simple
       responses:
         "200":
           description: 存在時のレスポンス
@@ -82,95 +82,179 @@ paths:
 
       summary: 画像
       x-openapi-router-controller: openapi_server.controllers.default_controller
-  /admin/item:
-    put:
-      description: アイテムの編集
-      operationId: admin_item_put
+  /admin/bcrypt:
+    post:
+      description: パスワードをハッシュ化します
+      operationId: bcrypt_get
       parameters:
-      - description: ID
-        explode: false
-        in: query
-        name: id
-        required: true
-        schema:
-          format: int64
-          type: integer
-      - description: アイテム名
-        explode: false
-        in: query
-        name: name
-        required: true
-        schema:
-          type: string
-      - description: レアリティ
-        explode: false
-        in: query
-        name: rare
-        required: true
-        schema:
-          type: integer
-      - description: 画像ID
-        explode: false
-        in: query
-        name: image
-        required: true
-        schema:
-          format: int64
-          type: integer
+        - description: パスワード
+          explode: false
+          in: query
+          name: source
+          required: true
+          schema:
+            type: string
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GachaItem'
+                type: string
+          description: 正常なレスポンス
+      summary: パスワードをハッシュ化します
+      x-openapi-router-controller: openapi_server.controllers.security_controller
+  /admin/auth/{user_id}:
+    post:
+      description: ユーザー認証
+      operationId: auth_user_id_post
+      parameters:
+        - description: ユーザーID
+          explode: false
+          in: path
+          name: user_id
+          required: true
+          schema:
+            type: string
+          style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PasswordObject"
+
+        required: true
+      # - description: パスワード
+      # explode: false
+      # in:
+      # name: password
+      # required: true
+      # schema:
+      # type: string
+      # style: form
+      # - description: ユーザーID
+      #   explode: false
+      #   in: path
+      #   name: user_id
+      #   required: true
+      #   schema:
+      #     type: string
+      #   style: simple
+      # - description: パスワード
+      #   explode: false
+      #   in: query
+      #   name: password
+      #   required: true
+      #   schema:
+      #     type: string
+      #     style: form
+      responses:
+        "200":
+          description: 正常なレスポンス
+          content:
+            "text/plain":
+              schema:
+                type: string
+      summary: ユーザー認証
+      x-openapi-router-controller: openapi_server.controllers.security_controller
+  /admin/item:
+    put:
+      description: アイテムの編集
+      operationId: admin_item_put
+      parameters:
+        - description: ID
+          explode: false
+          in: query
+          name: item_id
+          required: true
+          schema:
+            format: int64
+            type: integer
+        - description: アイテム名
+          explode: false
+          in: query
+          name: name
+          required: true
+          schema:
+            type: string
+        - description: レアリティ
+          explode: false
+          in: query
+          name: rare
+          required: true
+          schema:
+            format: int32
+            type: integer
+        - description: 画像ID
+          explode: false
+          in: query
+          name: image
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: 正常なレスポンス
+          content:
+            "text/plain":
+              schema:
+                type: string
+      #        "200":
+      #          content:
+      #            application/json:
+      #              schema:
+      #                $ref: '#/components/schemas/GachaItem'
+      #          description: 正常なレスポンス
+      #        "400":
+      #          content:
+      #            application/json:
+      #              schema:
+      #                $ref: '#/components/schemas/GachaItem'
+      #          description: リクエストが不正な場合
+      x-openapi-router-controller: openapi_server.controllers.security_controller
+      security:
+        - jwt: []
+    post:
+      description: アイテムの追加
+      operationId: admin_item_post
+      parameters:
+        - description: アイテム名
+          explode: false
+          in: query
+          name: name
+          required: true
+          schema:
+            type: string
+        - description: レアリティ
+          explode: false
+          in: query
+          name: rare
+          required: true
+          schema:
+            format: int64
+            type: integer
+        - description: 画像ID
+          explode: false
+          in: query
+          name: image
+          required: false
+          schema:
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GachaItem"
           description: 正常なレスポンス
         "400":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GachaItem'
+                $ref: "#/components/schemas/GachaItem"
           description: リクエストが不正な場合
       x-openapi-router-controller: openapi_server.controllers.security_controller
-    post:
-      description: アイテムの追加
-      operationId: admin_item_post
-      parameters:
-      - description: アイテム名
-        explode: false
-        in: query
-        name: name
-        required: true
-        schema:
-          type: string
-      - description: レアリティ
-        explode: false
-        in: query
-        name: rare
-        required: true
-        schema:
-          format: int64
-          type: integer
-      - description: 画像ID
-        explode: false
-        in: query
-        name: image
-        required: false
-        schema:
-          type: string
-      responses:
-          "200":
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/GachaItem'
-            description: 正常なレスポンス
-          "400":
-            content:
-                application/json:
-                  schema:
-                    $ref: '#/components/schemas/GachaItem'
-            description: リクエストが不正な場合
-      x-openapi-router-controller: openapi_server.controllers.security_controller
+      security:
+        - jwt: []
   /admin/upload:
     post:
       description: 画像のアップロード
@@ -193,15 +277,17 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GachaItem'
+                $ref: "#/components/schemas/GachaItem"
           description: 正常なレスポンス
         "400":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GachaItem'
+                $ref: "#/components/schemas/GachaItem"
           description: リクエストが不正な場合
       x-openapi-router-controller: openapi_server.controllers.security_controller
+      security:
+        - jwt: []
 components:
   schemas:
     GachaItem:
@@ -231,20 +317,35 @@ components:
     GachaList:
       example:
         gachaList:
-        - pictId: 6
-          name: name
-          id: 0
-          rare: 1
-        - pictId: 6
-          name: name
-          id: 0
-          rare: 1
+          - pictId: 6
+            name: name
+            id: 0
+            rare: 1
+          - pictId: 6
+            name: name
+            id: 0
+            rare: 1
       properties:
         gachaList:
           items:
-            $ref: '#/components/schemas/GachaItem'
+            $ref: "#/components/schemas/GachaItem"
           title: gachaList
           type: array
       title: GachaList
       type: object
+    PasswordObject:
+      required:
+        - password
+      type: object
+      properties:
+        password:
+          type: string
+  securitySchemes:
+    jwt:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+      x-bearerInfoFunc: openapi_server.controllers.token.decode_token
+#security:
+#  - jwt: []
 
